--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@craco/craco": "^6.1.1",
     "@draft-js-plugins/editor": "^4.1.0",
+    "@draft-js-plugins/image": "^4.1.1",
     "@draft-js-plugins/inline-toolbar": "^4.1.1",
     "@draft-js-plugins/side-toolbar": "^4.1.0",
     "@reduxjs/toolkit": "^1.5.1",
