--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@draft-js-plugins/side-toolbar": "^4.1.0",
     "@reduxjs/toolkit": "^1.5.1",
     "bridge": "file:bridge-1.0.0.tgz",
+    "draft-convert": "^2.1.11",
+    "draft-js": "^0.11.7",
     "draft-js-export-html": "^1.4.1",
     "draft-js-import-html": "^1.4.1",
     "drop": "file:drop-1.0.0.tgz",
@@ -56,6 +58,7 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "@trivago/prettier-plugin-sort-imports": "^2.0.2",
+    "@types/draft-convert": "^2.1.2",
     "@types/draft-js": "^0.11.1",
     "@types/jest": "^26.0.23",
     "@types/node": "^12.20.11",
