--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "@draft-js-plugins/side-toolbar": "^4.1.0",
     "@reduxjs/toolkit": "^1.5.1",
     "bridge": "file:bridge-1.0.0.tgz",
-    "draft-convert": "^2.1.11",
     "draft-js": "^0.11.7",
     "draft-js-export-html": "^1.4.1",
     "draft-js-import-html": "^1.4.1",
@@ -19,6 +18,7 @@
     "mdb-ui-kit": "^3.5.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -58,7 +58,6 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "@trivago/prettier-plugin-sort-imports": "^2.0.2",
-    "@types/draft-convert": "^2.1.2",
     "@types/draft-js": "^0.11.1",
     "@types/jest": "^26.0.23",
     "@types/node": "^12.20.11",
