--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "draft-js-export-html": "^1.4.1",
     "draft-js-import-html": "^1.4.1",
     "drop": "file:drop-1.0.0.tgz",
-    "mdb-react-ui-kit": "*",
-    "mdb-ui-kit": "^3.5.0",
+    "mdb-react-ui-kit": "^1.0.0-beta4",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
