--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,7 @@
 @schettnet:registry=https://npm.pkg.github.com
+//npm.pkg.github.com/
+#always-auth=true
+
 @snek-shipyard:registry=https://npm.pkg.github.com
+//npm.pkg.github.com/
+#always-auth=true
