--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@draft-js-plugins/inline-toolbar": "^4.1.1",
     "@draft-js-plugins/side-toolbar": "^4.1.0",
     "@reduxjs/toolkit": "^1.5.1",
-    "bridge": "file:bridge-1.0.0.tgz",
+    "@schettnet/bridge": "^1.0.0",
     "draft-js": "^0.11.7",
     "draft-js-export-html": "^1.4.1",
     "draft-js-import-html": "^1.4.1",
